# bomlang

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.sh
srcs/: CMakeLists.txt
srcs/binary/: CMakeLists.txt
srcs/bomi/: CMakeLists.txt  main.c
srcs/core/: CMakeLists.txt  buf.c  common.h  compiler.c  compiler.h  error.c  error.h  node.c  node.h  parser.c  parser.h  runtime.h  script.c  script.h  smem.c  smem.h  syntax.c  syntax.h  table.c  table.h  token.c  token.h  unicode.c  unicode.h  visitor.h  vm.c  vm.h
srcs/core/compiler/: compiler.c  compiler.h  node.c  node.h  parser.c  parser.h  script.c  script.h  syntax.c  token.c  token.h
srcs/core/container/: table.c  table.h
srcs/core/symbol/: symbol.c  symbol.h  symboltable.c  symboltable.h
srcs/corelib/: CMakeLists.txt  buf.c  buf.h  common.h  compiler.c  compiler.h  errno.c  errno.h  error.c  error.h  node.c  node.h  parser.c  parser.h  platform.h  runtime.h  script.c  script.h  syntax.c  syntax.h  token.c  token.h  visitor.h  vm.c  vm.h
